config/base/derive/tests/ui_fail/invalid_attrs_struct.stderr
error: Unknown field: `whatever`
 --> tests/ui_fail/invalid_attrs_struct.rs:4:10
  |
4 | #[config(whatever)] // not supported on structs
  |          ^^^^^^^^
